test/tests/bad/invalid-user-type-sig.carth
;; InvalidUserTypeSig

(define: (invalid-user-type-signature x)
    (forall (a b c) (Fun a a))
  x)
